--- a/main.css
+++ b/main.css
@@ -55,6 +55,11 @@ body{
     width: 80px;
     border-radius: 20px;
     border: 0;
+    background-color: red;
+    color: white;
+    cursor: pointer;
+    transition: opacity 150ms ease-in-out;
+    opacity: 0.85;
  }
 /* Escritorio */
 @media screen and (min-width: 768px){
