--- a/main.css
+++ b/main.css
@@ -13,7 +13,7 @@ body{
     height: 100%;
     width: 210px;
     background-color:white;
-    color: black; 
+    color: black;
   }
   
 .nav-brand{
@@ -91,5 +91,16 @@ body{
         display: inline-block;
         margin-right: 10px;
         padding: 0;
+    }
+
+    .contenedor{
+        margin-top: 100px;
+    }
+
+    .btn{
+        background: none;
+        border: none;
+        cursor: pointer;
+        margin-right: 10px;
     }
 }
