--- a/css/ventana-emergente.css
+++ b/css/ventana-emergente.css
@@ -16,3 +16,20 @@
     display: none;
 
 }
+.editar-edificio{
+    background: lightgrey;
+    width: 30%;
+    color: black;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;
+    text-align: center;
+    padding: 33px;
+    min-height: 150px;
+    border-radius: 22px;
+    position: absolute;
+    left: 34%;
+    margin: 0 auto;
+    border:black 8px double;
+    display: none;
+
+}
