--- a/css/main.css
+++ b/css/main.css
@@ -100,6 +100,16 @@ body{
     padding: 10px;
 }
 
+/* Login */
+.body-login{
+    padding: 200px  30% 30% 30%;
+}
+
+.contenedor-login{
+    background-color: white;
+    text-align: center;
+}
+
 /* Escritorio */
 @media screen and (min-width: 768px){
     /* Barra navegacion */
