--- a/css/main.css
+++ b/css/main.css
@@ -109,6 +109,14 @@ body{
     background-color: white;
     text-align: center;
 }
+.perfil{
+    background-color: white;
+    text-align: center;
+    padding: 10px  10% 10% 10%;
+    margin-left: 35%;
+    border-radius: 10%;
+    box-shadow: 2px 2px 2px 2px black;
+}
 
 /* Escritorio */
 @media screen and (min-width: 768px){
