--- a/css/main.css
+++ b/css/main.css
@@ -117,6 +117,10 @@ body{
     border-radius: 10%;
     box-shadow: 2px 2px 2px 2px black;
 }
+a{
+    text-decoration: none;
+    color: black;
+}
 
 /* Escritorio */
 @media screen and (min-width: 768px){
