--- a/css/main.css
+++ b/css/main.css
@@ -122,6 +122,11 @@ a{
     color: black;
 }
 
+#map {
+    height: 300px;
+    width: 400px;
+  }
+
 /* Escritorio */
 @media screen and (min-width: 768px){
     /* Barra navegacion */
