--- a/css/main.css
+++ b/css/main.css
@@ -126,7 +126,6 @@ a{
     height: 300px;
     width: 400px;
   }
-
 /* Escritorio */
 @media screen and (min-width: 768px){
     /* Barra navegacion */
@@ -187,5 +186,12 @@ a{
     .añadir-edificio input{
         margin-top: 5px;
         margin-bottom: 5px;
+    }
+
+    .grafico{
+        display: block;
+        width: 50%;
+        margin: 0 auto;    
+        margin-bottom: 40px;
     }
 }
