--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
+    z-index: 1;
 }
 
 body{
@@ -10,6 +11,7 @@ body{
 /* Dispositivos moviles */
 /* Barra navegacion */
 .nav{
+    z-index: 2;
     position: fixed;
     left: 0;
     height: 100%;
