--- a/css/noticias.css
+++ b/css/noticias.css
@@ -1,8 +1,8 @@
 .noticias{
     background-color: white;
     text-align: center;
-    padding: 10px  10% 10% 10%;
-    margin-left: 30px;
-    border-radius: 10%;
+    padding: 10px  7% 7% ;
+    margin-left: 32px;
+    border-radius: 5%;
     box-shadow: 2px 2px 2px 2px black;
 }
