--- a/css/footer.css
+++ b/css/footer.css
@@ -1,9 +1,10 @@
 .cuadrado{
     display: flex;
-    width: 75%;
+    width: 100%;
     margin: 0 auto;
-    padding-left: 15%;
     text-align: center;
+    width: 75%;
+    padding-right: 80px;
 }
 .ucscbottom{
     width: 300px;
@@ -15,5 +16,9 @@
     background-color: white;
 }
 .campus{
-    padding-right: 7%;
+    padding-right: 10%;
+}
+.clima{
+    padding-left: 100px  ;
+    padding-right: 100px;
 }
