--- a/css/noticias.css
+++ b/css/noticias.css
@@ -2,7 +2,8 @@
     background-color: white;
     text-align: center;
     padding: 10px  7% 7% ;
-    margin-left: 25%;
+    margin-left: 20%;
+    margin-right: 20%;
     border-radius: 5%;
     box-shadow: 2px 2px 2px 2px black;
 }
